--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-    <title>我的簡歷</title>
+    <title>我的簡歷1234123134</title>
 <body bgcolor="#f4f4d8">  <!--文字要打在這邊-->
      <h1>我的簡歷</h1>
      <main><h4>姓名:XXXX</h4></main><!--主要內容-->
